# GaloisRing

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE  bazel-bin  bazel-galois_ring  bazel-out  bazel-testlogs  build.sh  cmake.toml  draw_plots.py  expected_out_add  expected_out_multiply  galoisring.h  genlifttables.sage  genlifttables.sage.py  gring.h  out.folded  out.perf  perf.data  perf.data.old  precompute.sh  run_benchmark.sh  run_test.sh  run_test_script.py  test.c  test.sage  test.sage.py
Test/: CMakeLists.txt
lib/: 2-4-8-demo.sage  BUILD  aes.h  compresscheck.h  compressedmultcheck.h  demo  demo.cpp  demo.h  embedding.sage  exceptional_sequence.sage  exseqtables.h  findarootbyrobin.sage  genmodulus.sage  genreduction.sage  gf.h  gring.cc  gring.h  grlifttables.h  grmodtables.h  grtowertables.h  grtowertables.sage  innprodcheck.h  int_demo  int_demo.cpp  lagrange.h  random.h  randomKeccak.h  reduction.sage  ro.cpp  ro.h  root.sage.py  rootbyrobin.sage  sacCheck.h  sequence_verify.sage  test_tolist.sage  testembedding2slow.sage
main/: BUILD  galoisring.h  gring.h  main.cc
src/: benchmark_GR.cc  benchmark_MPC.cc  demo.cc  run_bm_gr.py  testKeccak.cc  testSac.cc  test_compress_check.cc  test_innerproduct_check.cc  test_ka.cc  test_sac_check.cc
test/: BUILD  testBR.cc  test_int.c  utest.cc  utest.h
tmp_documentation/: BBQ_notes.tex  Limbo_notes.ddf  Limbo_notes.tex  TODO.md  image001.png.bb  image002.png.bb  image003.png.bb  ongoing_misc.tex  ongoing_misc.tex.Backup-20240628-101650-14844  ongoing_misc.tex.Backup-20240921-135935-2972  (+2 more)
(+48 files in other folders)
